--- a/rhel/rhelconfigure.yml
+++ b/rhel/rhelconfigure.yml
@@ -28,7 +28,7 @@
       "8.4": "scap-security-guide-0.1.57-3.el8_4.noarch"
       "8.5": "scap-security-guide-0.1.57-5.el8.noarch"
       "7.9": "scap-security-guide-0.1.57-6.el7_9.noarch"
-      "9.0": "scap-security-guide-0.1.60-5.el9.noarch"
+      "9.0": "scap-security-guide-0.1.60-6.el9_0.noarch"
 
     rhel_version: "{{ ansible_facts['distribution_version'] }}"
       #rhel_version: "{{ ansible_facts['distribution_major_version'] }}"
