--- a/rhel/rhelrhc.yml
+++ b/rhel/rhelrhc.yml
@@ -4,7 +4,7 @@
 #
 - hosts: all
 
-  name: Install and configure the RHC tool
+  name: Install and configure the RHC tool (RHEL 8.6+ only)
   gather_facts: yes
   become: yes
 
@@ -12,6 +12,11 @@
     - name: Print the RHEL version
       debug:
         var: ansible_facts['distribution_version']
+
+    - name: End play for this host if RHEL older than 8.6
+      ansible.builtin.meta: end_host
+      when:
+        - ansible_facts['distribution_version'] is version('8.5', '<=')
 
     # Only relevant for RHEL 8.0-8.5
     - name: Enable repo and install Ansible (RHEL <=8.5)
@@ -22,26 +27,28 @@
             state: enabled
   
         - name: Install Ansible (RHEL <= 8.5)
-          yum:
+          dnf:
             name: ansible
             state: present
       when:
         - ansible_facts['distribution_version'] is version('8.5', '<=')
   
     - name: Install ansible-core (RHEL >= 8.6)
-      yum:
+      dnf:
         name: ansible-core
         state: present
       when:
         - ansible_facts['distribution_version'] is version('8.6', '>=')
   
     - name: Install rhc required packages
-      yum:
-        name: "{{ item }}"
+      dnf:
+        name:
+          - rhc-worker-playbook
+          - rhc
         state: present
-      loop:
-        - rhc-worker-playbook
-        - rhc
+      #loop:
+        #- rhc-worker-playbook
+        #- rhc
   
     - name: Enable Red Hat Connector
       command: rhc connect
