Updated to support RHEL 8.6+ using rhc This is due to a bug in the susbcription manager module preventing RHEL 8.6+ hosts from unregistering correctly

--- a/rhel/rhelunregister.yml
+++ b/rhel/rhelunregister.yml
@@ -15,13 +15,25 @@
 
   tasks:
 
-  - name: unregister the Insights Client
-    command: insights-client --unregister
-    tags:
-      - insights
+  - name: Unregister systems running RHEL <=8.5
+    block: 
+      - name: unregister the Insights Client
+        command: insights-client --unregister
+        tags:
+          - insights
+    
+      - name: Unregister the systems with subscription-manager
+        redhat_subscription:
+          state: absent
+        tags:
+          - subscription-manager
+    when:
+      - ansible_facts['distribution_version'] is version('8.5', '<=')
 
-  - name: Unregister the systems with subscription-manager
-    redhat_subscription:
-      state: absent
-    tags:
-      - subscription-manager
+  - name: Unregister systems running RHEL >8.5
+    block: 
+      - name: Disable Red Hat Connector
+        command: rhc disconnect
+        #register: rhc_result
+    when:
+      - ansible_facts['distribution_version'] is version('8.5', '>')
