Change to FQCN for timezone module

--- a/rhel/rhelconfigure.yml
+++ b/rhel/rhelconfigure.yml
@@ -39,7 +39,7 @@
       - hostname
 
   - name: Set the system timezone correctly
-    timezone:
+    community.general.timezone:
       name: Australia/Melbourne
     tags:
       - timezone
