--- a/rhel/rhelfapolicyd.yml
+++ b/rhel/rhelfapolicyd.yml
@@ -1,6 +1,6 @@
 ---
-- name: Update fapolicyd
-  hosts: rhelvm
+- name: Update fapolicyd and install cowsay app
+  hosts: all
   become: true
 
   vars:
@@ -11,3 +11,11 @@
 
   roles:
     - { role: shaneboulden.fapolicyd }
+
+
+  tasks:
+    - name: Grab the cowsay application
+      ansible.builtin.unarchive:
+        src: https://github.com/Code-Hex/Neo-cowsay/releases/download/v2.0.4/cowsay_2.0.4_Linux_x86_64.tar.gz
+        dest: /usr/local/bin
+        remote_src: yes
