Clearer requirements file

--- a/rhel/roles/requirements.yml
+++ b/rhel/roles/requirements.yml
@@ -1,4 +1,5 @@
 ---
-# Shane's role to install and configure fapolicyd 
-# with appropriate application allowlist
-- src: shaneboulden.fapolicyd
+roles:
+  # Shane's role to install and configure fapolicyd 
+  # with appropriate application allowlist
+  - src: shaneboulden.fapolicyd
