--- a/rhel/vars/ssg_versions.yml
+++ b/rhel/vars/ssg_versions.yml
@@ -10,5 +10,6 @@ scap_security_guide_package:
   "8.4": "scap-security-guide-0.1.57-3.el8_4.noarch"
   "8.5": "scap-security-guide-0.1.57-5.el8.noarch"
   "8.6": "scap-security-guide-0.1.63-1.el8_6.noarch"
+  "8.7": "scap-security-guide-0.1.63-4.el8.noarch"
   "7.9": "scap-security-guide-0.1.57-8.el7_9.noarch"
-  "9.0": "scap-security-guide-0.1.60-6.el9_0.noarch"
+  "9.0": "scap-security-guide-0.1.63-2.el9_0.noarch"
