--- a/rhel/vars/ssg_versions.yml
+++ b/rhel/vars/ssg_versions.yml
@@ -13,3 +13,4 @@ scap_security_guide_package:
   "8.7": "scap-security-guide-0.1.63-4.el8.noarch"
   "7.9": "scap-security-guide-0.1.57-8.el7_9.noarch"
   "9.0": "scap-security-guide-0.1.63-2.el9_0.noarch"
+  "9.1": "scap-security-guide-0.1.63-5.el9.noarch"
