--- a/rhel/rhelconfigure.yml
+++ b/rhel/rhelconfigure.yml
@@ -19,8 +19,18 @@
     rhel_version: "{{ ansible_facts['distribution_version'] }}"
       #rhel_version: "{{ ansible_facts['distribution_major_version'] }}"
 
-  tasks:
+    redhat_portal_username: "{{ rhn_username }}"
+    redhat_portal_password: "{{ rhn_password }}"
 
+    insights_tags:
+      environment: dev
+      #application: web
+      location:
+        country: au
+        state: vic
+        city: melbourne
+
+  tasks:
   - name: Show the RHEL version and scap-security-guide-version
     debug:
       #msg: RHEL version {{ rhel_version }}
@@ -66,34 +76,58 @@
         - git
       state: present
 
-  - name: Install Insights-related packages
+#  - name: Install Insights-related packages
+#    yum:
+#      name:
+#        - insights-client
+#        # Note that this exact format is needed to dereference rhel_version variable
+#        # Cannot use scap_security_guide_package.rhel_version notation
+#        - "{{ scap_security_guide_package[ rhel_version ] }}"
+#        - openscap-scanner
+#      state: present
+#    tags:
+#      - insights
+
+  - name: Run the Insights Client Role
+    include_role:
+      name: "{{ item }}"
+    loop:
+      - redhatinsights.insights.insights_client
+      #- redhatinsights.insights.compliance
+
+  post_tasks:
+
+  - name: Install specific scap-security-guide package
     yum:
       name:
-        - insights-client
         # Note that this exact format is needed to dereference rhel_version variable
         # Cannot use scap_security_guide_package.rhel_version notation
         - "{{ scap_security_guide_package[ rhel_version ] }}"
-        - openscap-scanner
       state: present
     tags:
       - insights
 
-  - name: Register the Insights Client
-    command: insights-client --register
-    tags:
-      - insights
+  - name: Run the Insights Compliance Role (in run only mode)
+    include_role:
+      name: redhatinsights.insights.compliance
+      tasks_from: run
 
-  - name: Run the Insights Client
-    command: insights-client
-    tags:
-      - insights
-
-  - name: Run the Insights Client Compliance Scan
-    command: insights-client --compliance
-    ignore_errors: yes
-    tags:
-      - insights
-      - compliance
+#  - name: Register the Insights Client
+#    command: insights-client --register
+#    tags:
+#      - insights
+#
+#  - name: Run the Insights Client
+#    command: insights-client
+#    tags:
+#      - insights
+#
+#  - name: Run the Insights Client Compliance Scan
+#    command: insights-client --compliance
+#    ignore_errors: yes
+#    tags:
+#      - insights
+#      - compliance
 
   - name: Install ansible-core and RHC, then connect (RHEL >= 8.6)
     block:
@@ -108,6 +142,7 @@
       - name: Enable Red Hat Connector
         command: rhc connect
         register: rhc_result
+
       - name: Show rhc result
         debug:
           var: rhc_result
