--- a/rhel/insights-issues.yml
+++ b/rhel/insights-issues.yml
@@ -64,3 +64,20 @@
         name: vm.swappiness
         value: '10'
         state: present
+
+    # The changes below will generate a critical issue relating 
+    # to SpamAssasin.  The code is directly copied from:
+    # https://gitlab.cee.redhat.com/insights-rules/insights-playbooks/-/blob/master/playbooks/security/hardening_spamassassin/SPAMASSASSIN_UNTRUSTED_SOURCES/rhel_host/breakit.yml
+    - name: Install spamassassin
+      yum:
+        name: spamassassin
+        state: present
+
+    - name: Configure untrusted source
+      blockinfile:
+        path: /etc/mail/spamassassin/channel.d/prodsec-insights.conf
+        create: true
+        marker: "# {mark} hardening_spamassassin"
+        block: |
+          CHANNELURL=malicious.prodsec.insights
+          KEYID=8366B0D9
