--- a/rhel/insights-issues.yml
+++ b/rhel/insights-issues.yml
@@ -3,7 +3,7 @@
 #
 - hosts: all
 
-  name: Register RHEL VMs and install Insights/related
+  name: Trigger some issues for the Red Hat Insights Advisor service to report on
   gather_facts: yes
   become: yes
 
@@ -13,12 +13,15 @@
   #- ansible_python_interpreter: /usr/bin/python3
 
   tasks:
-    - name: Put SELinux in permissive mode, logging actions that would be blocked.
-      ansible.posix.selinux:
-        policy: targeted
-        state: permissive
+    #- name: Put SELinux in permissive mode, logging actions that would be blocked.
+    #  ansible.posix.selinux:
+    #    policy: targeted
+    #    state: permissive
+    #  tags: 
+    #    - selinux
           
-    # PostgreSQL-related rules, courtesy Paul Wayper
+    # "The postgresql database performance decreases when the tuned best practices are not applied"
+    # Info below courtesy of Paul Wayper
     # Here are the configuration settings that cause that rule to trigger:
     # 1. RHEL 8 or later
     # 2. There is no mssql-server, oracle, satellite or satellite-capsule, sap netweaver, sap hana
@@ -43,28 +46,39 @@
       dnf:
         name: '@postgresql:13'
         state: present
+      tags:
+        - postgresql
 
     - name: Find out if PostgreSQL is initialized
       ansible.builtin.stat:
         path: /var/lib/pgsql/data/pg_hba.conf
       register: postgres_data
+      tags:
+        - postgresql
 
     - name: Initialize PostgreSQL
       shell: "postgresql-setup --initdb"
       when: not postgres_data.stat.exists
+      tags:
+        - postgresql
 
     - name: Ensure PostgreSQL service is enabled and started
       ansible.builtin.systemd:
         state: started
         name: postgresql
         enabled: true
+      tags:
+        - postgresql
 
     - name: Set the vm.swappiness too high
       ansible.posix.sysctl:
         name: vm.swappiness
         value: '10'
         state: present
+      tags:
+        - postgresql
 
+    # Decreased security: SpamAssassin using untrusted channels
     # The changes below will generate a critical issue relating 
     # to SpamAssasin.  The code is directly copied from:
     # https://gitlab.cee.redhat.com/insights-rules/insights-playbooks/-/blob/master/playbooks/security/hardening_spamassassin/SPAMASSASSIN_UNTRUSTED_SOURCES/rhel_host/breakit.yml
@@ -72,6 +86,8 @@
       yum:
         name: spamassassin
         state: present
+      tags:
+        - spamassassin
 
     - name: Configure untrusted source
       blockinfile:
@@ -81,3 +97,33 @@
         block: |
           CHANNELURL=malicious.prodsec.insights
           KEYID=8366B0D9
+      tags:
+        - spamassassin
+
+    # Decreased security: System log permissions 
+    - name: Open up /var/log directory permissions
+      ansible.builtin.file:
+        path: /var/log
+        state: directory
+        mode: a+w
+        #modification_time: preserve
+        #access_time: preserve
+      tags:
+        - syslog
+
+    # Decreased security: System log permissions 
+    - name: Open up /etc/ssh/sshd_config file permissions
+      ansible.builtin.file:
+        path: /etc/ssh/sshd_config
+        state: file
+        mode: a+w
+        #modification_time: preserve
+        #access_time: preserve
+      tags:
+        - ssh
+
+    - name: Run the Insights Client
+      command: insights-client
+      tags:
+        - insights
+
