--- a/rhel/rhelconfigure.yml
+++ b/rhel/rhelconfigure.yml
@@ -10,6 +10,7 @@
   vars_files:
     - vars/rhn_credential.yml
     - vars/ssg_versions.yml
+    - vars/rhc_configuration.yml
 
   vars:
   # Explicitly telling Ansible to use Python3, because of the bug below:
@@ -19,149 +20,59 @@
     rhel_version: "{{ ansible_facts['distribution_version'] }}"
       #rhel_version: "{{ ansible_facts['distribution_major_version'] }}"
 
-    redhat_portal_username: "{{ rhn_username }}"
-    redhat_portal_password: "{{ rhn_password }}"
+  pre_tasks:
+    - name: Show the RHEL version and scap-security-guide-version
+      debug:
+        msg: RHEL version {{ rhel_version }} requires {{ scap_security_guide_package[ rhel_version ] }}
+      tags:
+      - insights
+      - debug
 
-    insights_tags:
-      environment: dev
-      #application: web
-      location:
-        country: au
-        state: vic
-        city: melbourne
+    - name: Set the system hostname correctly
+      hostname:
+        name: "{{ inventory_hostname }}"
+        use: systemd
+      tags:
+        - hostname
+
+    - name: Set the system timezone correctly
+      community.general.timezone:
+        name: Australia/Melbourne
+      tags:
+        - timezone
 
   tasks:
-  - name: Show the RHEL version and scap-security-guide-version
-    debug:
-      #msg: RHEL version {{ rhel_version }}
-      #msg: RHEL version {{ rhel_version }} requires {{ scap_security_guide_package[ lookup(vars.rhel_version) ] }}
-      #msg: Requires {{ scap_security_guide_package[ lookup(ansible_facts['distribution_version']) ] }}
-      msg: RHEL version {{ rhel_version }} requires {{ scap_security_guide_package[ rhel_version ] }}
-    tags:
-    - insights
-    - debug
 
-  - name: Set the system hostname correctly
-    hostname:
-      name: "{{ inventory_hostname }}"
-      use: systemd
-    tags:
-      - hostname
+    - name: Run the RHC role
+      include_role:
+        name: linux-system-roles.rhc
+      tags:
+        - rhc
 
-  - name: Set the system timezone correctly
-    community.general.timezone:
-      name: Australia/Melbourne
-    tags:
-      - timezone
-
-  - name: Register the systems with subscription-manager
-    redhat_subscription:
-      state: present
-      username: "{{ rhn_username }}"
-      password: "{{ rhn_password }}"
-      #auto_attach: true
-      syspurpose:
-        usage: "Development/Test"
-        role: "Red Hat Enterprise Server"
-        service_level_agreement: "Premium"
-    tags:
-      - subscription-manager
-
-  - name: Install some useful packages
-    yum:
-      name:
-        - bash-completion
-        - vim
-        - tmux
-        - git
-      state: present
-
-#  - name: Install Insights-related packages
-#    yum:
-#      name:
-#        - insights-client
-#        # Note that this exact format is needed to dereference rhel_version variable
-#        # Cannot use scap_security_guide_package.rhel_version notation
-#        - "{{ scap_security_guide_package[ rhel_version ] }}"
-#        - openscap-scanner
-#      state: present
-#    tags:
-#      - insights
-
-  - name: Run the Insights Client Role
-    include_role:
-      name: "{{ item }}"
-    loop:
-      - redhatinsights.insights.insights_client
-      #- redhatinsights.insights.compliance
+    - name: Install some useful packages
+      yum:
+        name:
+          - bash-completion
+          - vim
+          - tmux
+          - git
+        state: present
 
   post_tasks:
 
-  - name: Install specific scap-security-guide package
-    yum:
-      name:
-        # Note that this exact format is needed to dereference rhel_version variable
-        # Cannot use scap_security_guide_package.rhel_version notation
-        - "{{ scap_security_guide_package[ rhel_version ] }}"
-      state: present
-    tags:
-      - insights
+    - name: Install specific scap-security-guide package
+      yum:
+        name:
+          # Note that this exact format is needed to dereference rhel_version variable
+          # Cannot use scap_security_guide_package.rhel_version notation
+          - "{{ scap_security_guide_package[ rhel_version ] }}"
+        state: present
+      tags:
+        - compliance
 
-  - name: Run the Insights Compliance Role (in install only mode)
-    include_role:
-      name: redhatinsights.insights.compliance
-      tasks_from: install
-    tags:
-      - compliance
-
-#  - name: Register the Insights Client
-#    command: insights-client --register
-#    tags:
-#      - insights
-#
-#  - name: Run the Insights Client
-#    command: insights-client
-#    tags:
-#      - insights
-#
-#  - name: Run the Insights Client Compliance Scan
-#    command: insights-client --compliance
-#    ignore_errors: yes
-#    tags:
-#      - insights
-#      - compliance
-
-  - name: Install ansible-core and RHC, then connect (RHEL >= 8.6)
-    block:
-      - name: Install rhc required packages
-        dnf:
-          name:
-            - ansible-core
-            - rhc-worker-playbook
-            - rhc
-          state: present
-
-      - name: Enable Red Hat Connector
-        command: rhc connect
-        register: rhc_result
-
-      - name: Show rhc result
-        debug:
-          var: rhc_result
-        tags:
-          - debug
-    when:
-      - ansible_facts['distribution_version'] is version('8.6', '>=')
-
-
-  # You want to use subscription-manager syspurpose service-level --set Premium and similar for RHEL 8.6 and 9.x. The syspurpose commands are unified as a subcommand of subscription-manager going forward.
-  # existing syntax is preserved though for RHEL 8 though deprecated.
-# - name: Set the system purpose
-#   command: "{{ item }}"
-#   ignore_errors: yes
-#   loop:
-#     - syspurpose set-sla "Premium"
-#     - syspurpose set-usage "Development/Test"
-#     - syspurpose set-role "Red Hat Enterprise Linux Server"
-#   tags:
-#     - syspurpose
+    - name: Run the Insights Compliance Role (in install only mode)
+      include_role:
+        name: redhatinsights.insights.compliance
+        tasks_from: install
+      tags:
+        - compliance
