Switched from rhc role to linux_system_roles collection

--- a/rhel/requirements.yml
+++ b/rhel/requirements.yml
@@ -11,10 +11,11 @@
 collections:
   - community.general
   - redhatinsights.insights
+  - fedora.linux_system_roles
 
 roles:
   - src: shaneboulden.fapolicyd
-  - src: linux-system-roles.rhc
+  #- src: linux-system-roles.rhc
 # then
 # cd ~/.ansible/roles/linux-system-roles.rhc
 # ansible-galaxy collection install -vv -r meta/requirements.yml
