--- a/rhel/execution-environment.yml
+++ b/rhel/execution-environment.yml
@@ -1,4 +1,9 @@
+---
 version: 1
+
+#build_arg_defaults:
+  #EE_BASE_IMAGE: 'quay.io/ansible/ansible-runner:latest'
+
 dependencies:
   galaxy: requirements.yml
   python: requirements.txt
