--- a/rhel/vars/ssg_versions.yml
+++ b/rhel/vars/ssg_versions.yml
@@ -12,6 +12,7 @@ scap_security_guide_package:
   "8.5": "scap-security-guide-0.1.57-5.el8.noarch"
   "8.6": "scap-security-guide-0.1.63-1.el8_6.noarch"
   "8.7": "scap-security-guide-0.1.66-1.el8_7.noarch"
+  "8.8": "scap-security-guide-0.1.66-2.el8.noarch"
   "9.0": "scap-security-guide-0.1.66-1.el9_1.noarch"
   "9.1": "scap-security-guide-0.1.66-1.el9_1.noarch"
   "9.2": "scap-security-guide-0.1.66-1.el9_1.noarch"
