Added glibc-all-langpacks package so postgresql works

--- a/insights-issues.yml
+++ b/insights-issues.yml
@@ -50,6 +50,8 @@
           - postgresql
           - postgresql-server
           - tuned-profiles-postgresql
+          # Language packs required else postgresql won't start with "error: invalid locale settings"
+          - glibc-all-langpacks
         state: present
       tags:
         - postgresql
