Added conditional to bail when not RHEL

--- a/rhelconfigure.yml
+++ b/rhelconfigure.yml
@@ -23,6 +23,11 @@
 
   pre_tasks:
 
+    - name: End the play if this isn't a RHEL host
+      ansible.builtin.meta: end_host
+      when:
+        - ansible_distribution != 'RedHat'
+
     - name: Set the system hostname correctly
       hostname:
         name: "{{ inventory_hostname }}"
