--- a/vars/ssg_versions.yml
+++ b/vars/ssg_versions.yml
@@ -15,4 +15,6 @@ scap_security_guide_package:
   "8.8": "scap-security-guide-0.1.66-2.el8.noarch"
   "9.0": "scap-security-guide-0.1.66-1.el9_1.noarch"
   "9.1": "scap-security-guide-0.1.66-1.el9_1.noarch"
-  "9.2": "scap-security-guide-0.1.66-1.el9_1.noarch"
+  "9.2": "scap-security-guide-0.1.69-2.el9_2.noarch"
+  "9.3": "scap-security-guide-0.1.69-2.el9.noarch"
+   
