--- a/vars/ssg_versions.yml
+++ b/vars/ssg_versions.yml
@@ -13,8 +13,9 @@ scap_security_guide_package:
   "8.6": "scap-security-guide-0.1.63-1.el8_6.noarch"
   "8.7": "scap-security-guide-0.1.66-1.el8_7.noarch"
   "8.8": "scap-security-guide-0.1.66-2.el8.noarch"
+  "8.9": "scap-security-guide-0.1.72-2.el8_9.noarch"
+  "8.10": "scap-security-guide-0.1.72-2.el8_9.noarch"
   "9.0": "scap-security-guide-0.1.66-1.el9_1.noarch"
   "9.1": "scap-security-guide-0.1.66-1.el9_1.noarch"
   "9.2": "scap-security-guide-0.1.69-2.el9_2.noarch"
   "9.3": "scap-security-guide-0.1.69-2.el9.noarch"
-   
