Added Insights host groups to the config

--- a/vars/rhc_configuration.yml
+++ b/vars/rhc_configuration.yml
@@ -9,6 +9,7 @@ rhc_insights:
   state: present
   autoupdate: true
   remediation: present
+  group: bblasco
   tags:
     environment: dev
     location: #"au/vic/melbourne"
