--- a/vars/ssg_versions.yml
+++ b/vars/ssg_versions.yml
@@ -19,3 +19,4 @@ scap_security_guide_package:
   "9.1": "scap-security-guide-0.1.66-1.el9_1.noarch"
   "9.2": "scap-security-guide-0.1.69-2.el9_2.noarch"
   "9.3": "scap-security-guide-0.1.69-2.el9.noarch"
+  "9.4": "scap-security-guide-0.1.69-2.el9.noarch"
