--- a/vars/ssg_versions.yml
+++ b/vars/ssg_versions.yml
@@ -20,3 +20,4 @@ scap_security_guide_package:
   "9.2": "scap-security-guide-0.1.69-2.el9_2.noarch"
   "9.3": "scap-security-guide-0.1.69-2.el9.noarch"
   "9.4": "scap-security-guide-0.1.69-2.el9.noarch"
+  "9.4": "scap-security-guide-0.1.72-1.el9_3.noarch"
